trying to fix uneven heights on project cards

--- a/main.scss
+++ b/main.scss
@@ -251,14 +251,17 @@ a {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                min-height: 78vh;
+                min-height: 90vh;
                 border-radius: 5px;
                 box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 
                 .project-img {
 
+                    height: 250px;
+
                     img {
                         width: 100%;
+                        height: 100%;
                         border-radius: 5px;
                         object-fit: cover;
                         opacity: 0.15;
